<resources>
    <string name="app_name">Hotel Management App</string>
    <string name="dashboard">Dashboard</string>
    <string name="rooms">Rooms</string>
    <string name="timeline">Timeline</string>
    <string name="guests">Guests</string>
    <string name="finance">Finance</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="login">login</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="signup">Signup</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="username">Username</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="new_password">New password</string>
    <string name="confirm">Confirm</string>
    <string name="passwdError">Wrong password!</string>
</resources>